--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,20 @@ footer {
   margin: 10px;
   background-color: white;
 }
+
+
+button:hover {
+  cursor: pointer;
+}
+
+button:active {
+  transform: scale(1.1);
+}
+
+
+.key-div {
+  transition: transform 1s;
+}
+.scaled {
+  transform: scale(1.1);
+}
