--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
   text-align: center;
   background-color: #283149;
   user-select: none;
+  background: url(/marcela-laskoski-YrtFlrLo2DQ-unsplash.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 h1 {
